<resources>
    <string name="app_name">Task Management</string>
    <string name="task_management">مدیریت کارها</string>
    <string name="finished">انجام شده</string>
    <string name="not_finished">انجام نشده</string>
    <string name="new_task">کار جدید</string>
    <string name="write_new_task">نوشتن کار جدید</string>
    <string name="save">ذخیره</string>
    <string name="cancel">لغو</string>
    <string name="show_write_new_task">لطفا کار جدید را بنویسید</string>
</resources>