<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main"
    tools:context=".ui.MainActivity">

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/task_management"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/txt_title">

        <RadioButton
            android:id="@+id/rd_finished"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:text="@string/finished"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:buttonTint="@color/white" />

        <Space
            android:layout_width="32dp"
            android:layout_height="0dp" />

        <RadioButton
            android:id="@+id/rd_not_finished"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:text="@string/not_finished"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:buttonTint="@color/white" />
    </RadioGroup>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/background_view_main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radio_group" />

    <TextView
        android:id="@+id/txt_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textColor="@color/text_black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/view" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="@id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_state"
        tools:listitem="@layout/item_task" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/ic_add"
        app:backgroundTint="@color/main"
        app:borderWidth="0dp"
        app:elevation="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:pressedTranslationZ="12dp"
        app:tint="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>